# Scop

./: CMakeLists.txt  Makefile
include/: scop.h
includes/: libft.h  matrix.h  scop.h  vect.h
lib/libft/: Makefile
lib/libft/include/: libft.h
lib/libft/src/: ft_atof.c  ft_isblank.c  ft_pow.c  ft_strsplit.c
lib/libmath/: Makefile
lib/libmath/include/: libmath.h
lib/libmath/src/: mat4f_add.c  mat4f_copy.c  mat4f_mult.c  mat4f_rotate.c  mat4f_scale.c  mat4f_setter.c  mat4f_sub.c  mat4f_transpose.c  vec3f_add.c  vec3f_copy.c  vec3f_cross.c  vec3f_dot.c  vec3f_float_mult.c  vec3f_magnitude.c  vec3f_mult.c  vec3f_normalize.c  vec3f_rotate.c  vec3f_scale.c  vec3f_setter.c  vec3f_sub.c  vecnf_create.c
libft/: ft_strsplit.c
sources/: bmpcreater.c  image_creater.c  main.c  math_scop.c  new_matrix.c  new_vect.c  parser.c
src/: buff_setter.c  camera_function.c  init.c  key_function.c  looper.c  main.c  model_function.c  parce.c  scop.c  shade.c  sys_coords.c  texture.c  utils.c
